--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Merriweather', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient( to bottom right, rgb(238, 119, 8) 10%, rgb(131, 18, 10), rgb(238, 119, 8) 5%, rgb(131, 18, 10));
@@ -88,6 +86,9 @@ img {
   padding: 0;
   overflow: hidden;
   background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .active {
@@ -189,4 +190,21 @@ select:focus {
 
   .submit-button:hover {
     background-color: rgb(161, 4, 4);
+  }
+
+  .header {
+    font-size: 50px;
+    font-family: 'Pacifico', cursive;
+    color: #000000;
+    margin: 100px 0 30px 0;
+  }
+  
+  h3 {
+    font-family: 'Mukta', sans-serif;
+  }
+
+  .search-label {
+    font-size: 20px;
+    font-weight: bold;
+
   }
