--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,11 @@ img {
   background-color: lightblue;
 }
 
+
+.form {
+  margin: 100px 0 30px 0;
+}
+
 select {
   width: 300px;
   margin: 8px 10px 30px 15px;
@@ -189,7 +194,8 @@ select:focus {
   }
 
   .submit-button:hover {
-    background-color: rgb(161, 4, 4);
+    background-color: white;
+    color: rgb(161, 4, 4);
   }
 
   .header {
@@ -207,4 +213,8 @@ select:focus {
     font-size: 20px;
     font-weight: bold;
 
+  }
+
+  .cart {
+    margin: 100px 0 30px 0;
   }
