--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,8 @@ img {
   padding: 0;
   overflow: hidden;
   background-color: black;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
   width: 100%;
 }
@@ -96,10 +97,9 @@ img {
 }
 
 .search-bar {
-  margin-top: 1.5%;
   width: 15%;
   padding: 12px 20px;
-  margin: 8px 0;
+  margin: 20px;
   box-sizing: border-box;
   border: 1px solid #555;
   outline: none;
@@ -112,7 +112,7 @@ img {
 
 
 .form {
-  margin: 100px 0 30px 0;
+  margin: 50px 0 30px 0;
 }
 
 select {
@@ -202,7 +202,7 @@ select:focus {
     font-size: 50px;
     font-family: 'Pacifico', cursive;
     color: #000000;
-    margin: 100px 0 30px 0;
+    margin: 30px 0 30px 0;
   }
   
   h3 {
@@ -213,8 +213,4 @@ select:focus {
     font-size: 20px;
     font-weight: bold;
 
-  }
-
-  .cart {
-    margin: 100px 0 30px 0;
   }
