--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,26 @@
-body {
+body, html {
   margin: 0;
   font-family: 'Merriweather', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient( to bottom right, rgb(238, 119, 8) 10%, rgb(131, 18, 10), rgb(238, 119, 8) 5%, rgb(131, 18, 10));
+  height: 100%; 
+  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.home {
+  background-image: linear-gradient( to bottom right, rgb(238, 119, 8) 10%, rgb(131, 18, 10), rgb(238, 119, 8) 5%, rgb(131, 18, 10));
+  height: 200%; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .grid-container{
@@ -104,6 +114,7 @@ img {
   border: 1px solid #555;
   outline: none;
   border-radius: 5px;
+  background-image: url();
 }
 
 .search-bar:focus {
@@ -213,4 +224,9 @@ select:focus {
     font-size: 20px;
     font-weight: bold;
 
+  }
+
+  label {
+    font-size: 15px;
+    font-weight:bold;
   }
