--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body, html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient( to bottom right, rgb(238, 119, 8) 10%, rgb(131, 18, 10), rgb(238, 119, 8) 5%, rgb(131, 18, 10));
-  height: 100%; 
+  height: 107%; 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -52,7 +52,7 @@ code {
 }
 
 .container {
-  background-color: rgba(0, 0, 0, 0.486);
+  background-color: rgba(0, 0, 0, 0.2);
   padding: 20px 16px;
 }
 
@@ -69,6 +69,7 @@ img {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  border-right:1px solid #bbb;
 }
 
 .navBar:hover:not(.active) {
@@ -84,6 +85,7 @@ img {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  border-left:1px solid #bbb;
 }
 
 .nav-cart:hover:not(.active) {
