fixed sorting functionality

--- a/src/index.css
+++ b/src/index.css
@@ -232,3 +232,15 @@ select:focus {
     font-size: 15px;
     font-weight:bold;
   }
+
+  .sort {
+    margin-left: 30px;
+    margin-right: 10px;
+  }
+
+  .sort-input {
+    width: 40px;
+    padding: 12px 20px;
+    margin: 5px;
+    box-sizing: border-box;
+  }
