--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@ body, html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient( to bottom right, rgb(238, 119, 8) 10%, rgb(131, 18, 10), rgb(238, 119, 8) 5%, rgb(131, 18, 10));
-  height: 107%; 
+  background-attachment: fixed;
+  height: 100%; 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -15,26 +16,12 @@ code {
     monospace;
 }
 
-.home {
-  background-image: linear-gradient( to bottom right, rgb(238, 119, 8) 10%, rgb(131, 18, 10), rgb(238, 119, 8) 5%, rgb(131, 18, 10));
-  height: 200%; 
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .grid-container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  /* grid-template-rows: auto; */
+  grid-template-rows: 1fr 1fr 1fr;
   grid-gap: 10px;
   padding: 10px;
-}
-
-.grid-container > div {
-  text-align: center;
-  padding: 20px 0;
-  font-size: 15px;
 }
 
 .card {
@@ -54,6 +41,8 @@ code {
 .container {
   background-color: rgba(0, 0, 0, 0.2);
   padding: 20px 16px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 img {
@@ -62,7 +51,7 @@ img {
 }
 
 .navBar {
-  width: 100px;
+  width: 110px;
   float: left;
   display: block;
   color: white;
@@ -73,7 +62,7 @@ img {
 }
 
 .navBar:hover:not(.active) {
-  background-color: rgb(56, 2, 2);
+  background-color: rgb(97, 3, 3);
 }
 
 .nav-cart {
@@ -89,7 +78,7 @@ img {
 }
 
 .nav-cart:hover:not(.active) {
-  background-color: rgb(56, 2, 2);
+  background-color: rgb(97, 3, 3);
 }
 
 .nav {
@@ -97,7 +86,7 @@ img {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: black;
+  background-color: rgb(0, 0, 0, 0.9);
   position: -webkit-sticky;
   position: sticky;
   top: 0;
@@ -111,17 +100,14 @@ img {
 .search-bar {
   width: 15%;
   padding: 12px 20px;
-  margin: 20px;
   box-sizing: border-box;
-  border: 1px solid #555;
-  outline: none;
+  border: 1px solid rgb(0, 0, 0);
   border-radius: 5px;
-  background-image: url();
-}
+  text-align: left;
+  width: 260px;
+  border: 1px solid #555;
+} 
 
-.search-bar:focus {
-  background-color: lightblue;
-}
 
 
 .form {
@@ -192,7 +178,6 @@ select:focus {
   .submit-button {
     background-color: black;
     margin: 30px;
-    /* margin-bottom: 500px; */
     border: none;
     font-size: 15px;
     color: #FFFFFF;
@@ -220,6 +205,14 @@ select:focus {
   
   h3 {
     font-family: 'Mukta', sans-serif;
+    overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 2; /* number of lines to show */
+           line-clamp: 2;
+   -webkit-box-orient: vertical;
+   height: 70px;
+   text-align: center;
   }
 
   .search-label {
@@ -244,3 +237,30 @@ select:focus {
     margin: 5px;
     box-sizing: border-box;
   }
+
+
+.box {
+  width: 350px;
+  height: 35px;
+  margin-left: 40%;
+  margin-top: 20px;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 3px;
+}
+
+.box > i {
+  font-size: 20px;
+  color: #777;
+}
+
+.box > input {
+  flex: 1;
+  height: 30px;
+  border: none;
+  outline: none;
+  font-size: 17px;
+  padding-left: 10px; 
+}
